@@ -38,6 +38,7 @@ namespace WebCore {
 ApplicationCache::ApplicationCache()
     : m_group(0)
     , m_manifest(0)
+    , m_storageID(0)
 {
 }
 
