@@ -262,9 +262,6 @@ void ApplicationCacheGroup::setNewestCache(PassRefPtr<ApplicationCache> newestCa
     m_newestCache = newestCache; 
     m_caches.add(m_newestCache.get());
     m_newestCache->setGroup(this);
-
-    // Store the cache 
-    cacheStorage().storeNewestCache(this);
 }
 
 void ApplicationCacheGroup::update(Frame* frame)
@@ -528,6 +525,9 @@ void ApplicationCacheGroup::checkIfLoadIsComplete()
     }
     
     setNewestCache(m_cacheBeingUpdated.release());
+        
+    // Store the cache 
+    cacheStorage().storeNewestCache(this);
     
     callListeners(isUpgradeAttempt ? &DOMApplicationCache::callUpdateReadyListener : &DOMApplicationCache::callCachedListener, 
                   documentLoaders);
