@@ -1,3 +1,12 @@
+2008-05-06  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Adam.
+
+        Only use the toplevel application cache when loading subframes.
+
+        * loader/MainResourceLoader.cpp:
+        (WebCore::MainResourceLoader::load):
+
 2008-05-06  Adam Barth  <abarth-webkit@adambarth.com>
 
         Reviewed by Sam Weinig.
